fix: menu popup cant trigger on iphone

--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -43,6 +43,9 @@ $defaultHeaderHeight: 90px;
 
       // This is to prevent the actual width deviation caused by `transform: scale` from affecting the layout.
       max-width: 32px;
+      color: #000;
+      background: transparent;
+      border: none;
       cursor: pointer;
 
       .text {
@@ -55,6 +58,10 @@ $defaultHeaderHeight: 90px;
         letter-spacing: 0.15em;
         transform: scale($scale);
       }
+    }
+
+    .trigger:focus-visible {
+      outline: none;
     }
   }
 
